--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="src/grammar-explorer.js"></script>
     <script type="text/javascript" src="src/java-grammar.js"></script>
     <script type="text/javascript" src="src/python-grammar.js"></script>
+    <script type="text/javascript" src="src/toy-grammar.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
